# trial-repo

./: AboutPage.qml  CMakeLists.txt  HeatSelectDialog.qml  HomeScreen.qml  Main.qml  SettingsMainMenu.qml  TemperatureControlSlider.qml  UnitsPage.qml  WifiDialog.qml  first.cpp  main.cpp  qml.qrc  settingScreen.qml  systemcontroller.cpp  systemcontroller.h  wifimanager.cpp  wifimanager.h
